[project]
name = "thread-exporter"
version = "0.1.0"
description = "交互式查询 Codex 线程并导出 Markdown"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
license = { text = "MIT" }
authors = [
    { name = "Codex Contributors" },
]

[project.scripts]
thread-exporter = "thread_exporter.cli:main"

[dependency-groups]
dev = ["pytest>=8.4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

